--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
     "dev": "vite"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.16",
     "@tailwindcss/vite": "^4.0.0",
     "autoprefixer": "^10.4.21",
     "axios": "^1.8.2",
     "concurrently": "^9.0.1",
     "laravel-vite-plugin": "^1.2.0",
     "postcss": "^8.5.3",
-    "tailwindcss": "^4.1.3",
+    "tailwindcss": "^3.4.17",
     "vite": "^6.2.4"
   },
   "name": "ecommerce",
@@ -24,5 +26,9 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "preline": "^3.0.1",
+    "vanilla-calendar-pro": "^3.0.3"
+  }
 }
